--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-left">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Aditya Barve</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto flex-column">
@@ -110,10 +110,13 @@
             </div>
         </section>
         <section id="contact_tab" class="section jumbotron" style="display: none;">
+            <div class="alert alert-warning">
+                <strong>WARNING!</strong> THIS FUNCTION DOSENT WORK. IT IS UNDER DEVELOPMENT.
+              </div>
             <h2>Contact Form</h2>
             <p><i class="fas fa-phone"></i> +91 1237818209</p>
             <p><i class="fas fa-envelope"></i> adityabarve28@gmail.com</p>
-            <form id="contactForm" action="contact.php" method="POST">
+            <form id="contactForm" onsubmit="sendEmail(); reset(); return false; ">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" class="form-control" id="name" name="name" required>
@@ -143,5 +146,22 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script>
+        const username = getElementbyId('name');
+        function sendEmail(){
+            Email.send({
+    Host : "smtp.gmail.com",
+    username : "Aditya Barve",
+    To : 'adityabarve28@gmail.com',
+    From : getElementbyId('email').value,
+    Subject : getElementbyId('subject').value,
+    Body : getElementbyId('message').value
+}).then(
+  message => alert(message)
+);
+
+        }
+    </script>
 </body>
 </html>
