--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
         function sendEmail(){
             Email.send({
     Host : "smtp.gmail.com",
-    username : "Aditya Barve",
+    username : "",
+    password : "",
     To : 'adityabarve28@gmail.com',
     From : getElementbyId('email').value,
     Subject : getElementbyId('subject').value,
