--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     Subject : getElementbyId('subject').value,
     Body : getElementbyId('message').value
 }).then(
-  message => alert(message)
+  message => alert('message sent')
 );
 
         }
