--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <a class="navbar-brand" href="#">Aditya Barve</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="" id="about">About</a>
+                <a class="nav-link" href="#" id="about">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="" id="projects">Projects</a>
+                <a class="nav-link" href="#" id="projects">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="" id="contact">Contact</a>
+                <a class="nav-link" href="#" id="contact">Contact</a>
             </li>
         </ul>
     </nav>
