--- a/index.html
+++ b/index.html
@@ -29,15 +29,32 @@
         </a>
 
     </section>
-    <nav class="nav-bar-sticky">
-        <h2>Aditya Barve</h2>
-        <ul>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#projects">Project</a></li>
-            <li><a href="#">Contact Me</a></li>
-        </ul>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-bar-sticky">
+        <a class="navbar-brand" href="#">Aditya Barve</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#skills">Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#education">Education</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact Me</a>
+                </li>
+            </ul>
+        </div>
     </nav>
+
     <section class="sec-skills jumbotron" id="skills">
         <div class="container">
             <h2 class="skill-txt" style="color: white;">Skills</h2>
@@ -164,7 +181,6 @@
             </div>
         </div>
     </footer>
-    
 </body>
 
 </html>
