--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" disabled>Contact Me</a>
+                    <a class="nav-link" href="#" style="display:none;">Contact Me</a>
                 </li>
             </ul>
         </div>
