--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" style="display:none;">
                     <a class="nav-link" href="#" style="display:none;">Contact Me</a>
                 </li>
             </ul>
