--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
-                <li class="nav-item" style="display:none;">
-                    <a class="nav-link" href="#" style="display:none;">Contact Me</a>
+                <li class="nav-item">
+                   <a class="nav-link" href="mailto:adityabarve28@gmail.com?subject=Hello Aditya Barve">Contact Me</a>
+
                 </li>
             </ul>
         </div>
