--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
 
     <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-bar-sticky">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <a class="navbar-brand" href="#">Aditya Barve</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
