--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="https://github.com/adityabarve28" target="_blank">
+                <a class="nav-link" href="https://github.com/adityabarve28" target="_blank"> GitHub 
                     <i class="fab fa-github"></i>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://www.linkedin.com/in/aditya-barve-fswd/" target="_blank">
+                <a class="nav-link" href="https://www.linkedin.com/in/aditya-barve-fswd/" target="_blank"> LinkedIn 
                     <i class="fab fa-linkedin"></i>
                 </a>
             </li>
