--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of Aditya Barve, a web developer skilled in HTML, CSS, Bootstrap, JavaScript, PHP, and MySQL.">
+    <meta name="keywords" content="Aditya Barve, web developer, HTML, CSS, Bootstrap, JavaScript, PHP, MySQL">
+    <meta name="author" content="Aditya Barve">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Aditya Barve - Portfolio">
+    <meta property="og:description" content="Explore the projects and skills of Aditya Barve, a passionate web developer.">
+    <meta property="og:image" content="assets/images/PHP.jpg">
+    <meta property="og:url" content="https://adityabarve28.github.io/portfolio/">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
