--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of Aditya Barve, a web developer skilled in HTML, CSS, Bootstrap, JavaScript, PHP, and MySQL.">
-    <meta name="keywords" content="Aditya Barve, web developer, HTML, CSS, Bootstrap, JavaScript, PHP, MySQL">
-    <meta name="author" content="Aditya Barve">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Aditya Barve - Portfolio">
-    <meta property="og:description" content="Explore the projects and skills of Aditya Barve, a passionate web developer.">
-    <meta property="og:image" content="assets/images/PHP.jpg">
-    <meta property="og:url" content="https://adityabarve28.github.io/portfolio/">
-    <meta property="og:type" content="website">
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -38,45 +29,15 @@
         </a>
 
     </section>
-
-    <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <a class="navbar-brand" href="#">Aditya Barve</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#skills">Skills</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#education">Education</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="mailto:adityabarve28@gmail.com?subject=Hello Aditya Barve">Contact Me</a>
-            </li>
+    <nav class="nav-bar-sticky">
+        <h2>Aditya Barve</h2>
+        <ul>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#projects">Project</a></li>
+            <li><a href="#">Contact Me</a></li>
         </ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="https://github.com/adityabarve28" target="_blank"> GitHub 
-                    <i class="fab fa-github"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://www.linkedin.com/in/aditya-barve-fswd/" target="_blank"> LinkedIn 
-                    <i class="fab fa-linkedin"></i>
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-
+    </nav>
     <section class="sec-skills jumbotron" id="skills">
         <div class="container">
             <h2 class="skill-txt" style="color: white;">Skills</h2>
@@ -151,19 +112,19 @@
                     </ul>
                 </div>
                 <div class="col-sm-4 pro-sec-sep">
-                    <h4>Culinary Destination, Online Food Ordering and Management Website (Diploma Final Year Project):
-                    </h4>
+                    <a href="empowermental.html"><h4>EmpowerMental: WebApp</h4></a>
                     <ul>
-                        <li>This dynamic website boasts an array of functionalities designed to enhance customer
-                            experience, including seamless cart and order now feature.</li>
-                        <li>Additionally, an intuitive Admin Login provides administrators with comprehensive control,
-                            enabling them to effortlessly view orders, update order status and send real time order
-                            updates directly to customers WhatsApp ensuring unparalleled convenience and satisfaction.
-                        </li>
+                        <li>It is a web application focused on mental health and wellness, using HTML, CSS, Bootstrap, and Laravel.</li>
+                        <li>Utilized Laravel's MVC architecture for backend development, ensuring efficient data handling and secure user authentication</li>
+                        <li>Designed a responsive, user-friendly front-end with HTML, CSS, and Bootstrap to provide an intuitive user experience across devices.</li>
+                        <li>Implemented interactive features, such as user registration, personalized content, and mental health resources</li>
+                        <li>Ensured seamless integration of front-end and back-end technologies for smooth functionality.</li>
+                        <li>Conducted rigorous testing to identify and fix bugs, ensuring optimal performance and user satisfaction.</li>
+                        <li>Prioritized security best practices, including data validation and secure user authentication, to protect sensitive user information.</li>
                     </ul>
                 </div>
                 <div class="col-sm-4 pro-sec-sep">
-                    <h4>Invoice Generating & Management System: </h4>
+                    <a href="invoice_mgmt.html"><h4>Invoice Generating & Management System: </h4></a>
                     <ul>
                         <li>Creating an invoice generating and management system, to ease the process of invoicing and
                             management.</li>
@@ -203,6 +164,7 @@
             </div>
         </div>
     </footer>
+    
 </body>
 
 </html>
