--- a/invoice_mgmt.html
+++ b/invoice_mgmt.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EmpowerMental Gallery</title>
+    <title>Invoice Management Gallery</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -145,7 +145,7 @@
             const galleryContainer = document.querySelector('.gallery');
 
             for (let i = 1; i <= 9; i++) {
-                const imgSrc = `assets/images/invoice_mgmt_${i}.jpg`;
+                const imgSrc = `assets/images/empowermental_${i}.jpg`;
                 const imgAlt = `EmpowerMental Image ${i}`;
 
                 // Create a card for each image
