--- a/invoice_mgmt.html
+++ b/invoice_mgmt.html
@@ -145,8 +145,8 @@
             const galleryContainer = document.querySelector('.gallery');
 
             for (let i = 1; i <= 9; i++) {
-                const imgSrc = `assets/images/empowermental_${i}.jpg`;
-                const imgAlt = `EmpowerMental Image ${i}`;
+                const imgSrc = `assets/images/invoice_mgmt_${i}.jpg`;
+                const imgAlt = `invoice mgmt Image ${i}`;
 
                 // Create a card for each image
                 const img = document.createElement('img');
