--- a/empowermental.html
+++ b/empowermental.html
@@ -118,9 +118,9 @@
     <nav class="nav-bar-sticky">
         <h2><a href="index.html">Aditya Barve</a></h2>
         <ul>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="index.html#skills">Skills</a></li>
+            <li><a href="index.html#education">Education</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
             <li><a href="#">Contact Me</a></li>
         </ul>
     </nav>
