--- a/empowermental.html
+++ b/empowermental.html
@@ -75,7 +75,7 @@
         }
 
         /* Navbar Styles */
-        .nav-bar-sticky {
+      /*  .nav-bar-sticky {
             position: sticky;
             top: 0;
             background-color: #333;
@@ -109,7 +109,7 @@
 
         .nav-bar-sticky ul li a:hover {
             text-decoration: underline;
-        }
+        } */
     </style>
 </head>
 
