--- a/invoice_mgmt.html
+++ b/invoice_mgmt.html
@@ -115,15 +115,21 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="nav-bar-sticky">
-        <h2><a href="index.html">Aditya Barve</a></h2>
-        <ul>
-            <li><a href="index.html#skills">Skills</a></li>
-            <li><a href="index.html#education">Education</a></li>
-            <li><a href="index.html#projects">Projects</a></li>
-            <li><a href="#">Contact Me</a></li>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+    <h2 class="navbar-brand"><a href="index.html" class="text-white">Aditya Barve</a></h2>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="index.html#skills">Skills</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html#education">Education</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html#projects">Projects</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact Me</a></li>
         </ul>
-    </nav>
+    </div>
+</nav>
+
 <br><br>
     <div class="container">
         <!-- Full-size Image Modal -->
