--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Aditya Barve - Java & PHP Developer | Spring Boot Enthusiast">
+    <meta name="description" content="Aditya Barve is an aspiring Java and PHP developer with a passion for building robust web applications. Proficient in Spring Boot, Laravel, and backend development, Aditya is eager to contribute to innovative projects and grow in the tech industry.">
+    <meta name="keywords" content="Aditya Barve, Java Developer, PHP Developer, Spring Boot Developer, Laravel, Backend Developer, Web Development, Software Engineer, Tech Enthusiast">
+    <meta name="author" content="Aditya Barve">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -63,6 +70,16 @@
                     <ul>
                         <li>PHP</li>
                         <li>Core Java</li>
+                        <li>JDBC</li>
+                        <li>Hiernate</li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 skills-sec-sep">
+                    <h4>Frameworks : </h4>
+                    <ul>
+                        <li>PHP Laravel (Learning)</li>
+                        <li>Spring (Learning)</li>
+                        <li>Spring Boot (Learning)</li>
                     </ul>
                 </div>
                 <div class="col-sm-4 skills-sec-sep">
