--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="sec-top">
         <h2 class="sec-top-title">Aditya Barve</h2>
         <!-- Download Resume Button -->
-        <a href="assets/download/AdityaBarve_SpringBoot_Java_PHP.pdf" class="download-resume-button" data-text="Download Resume"
+        <a href="assets/download/AdityaBarve_SpringBoot_Java_PHP.pdf" alt="Aditya_barve, AdityaBarveResume" class="download-resume-button" data-text="Download Resume"
             download>
             <!-- Download Resume -->
         </a>
